invidious/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  namespace: invidious
  labels:
    app: invidious
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invidious
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
      labels:
        app: invidious
    spec:
      enableServiceLinks: false
      containers:
      - image: quay.io/invidious/invidious:fc2b9031d4850e7ed8eb24e388aeae38b4eb2762
        name: invidious
        readinessProbe:
          httpGet:
            path: /api/v1/stats
            port: 3000
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/v1/stats
            port: 3000
          periodSeconds: 5
          failureThreshold: 2
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: 192Mi
          limits:
            memory: 256Mi
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config-template
        configMap:
          name: config
      - name: config
        emptyDir: {}
